tests/ui/dyn-keyword/dyn-angle-brackets.stderr
error: trait objects without an explicit `dyn` are deprecated
  --> $DIR/dyn-angle-brackets.rs:15:10
   |
LL |         <fmt::Debug>::fmt(self, f)
   |          ^^^^^^^^^^
   |
   = warning: this is accepted in the current edition (Rust 2018) but is a hard error in Rust 2021!
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2021/warnings-promoted-to-error.html>
note: the lint level is defined here
  --> $DIR/dyn-angle-brackets.rs:4:9
   |
LL | #![deny(bare_trait_objects)]
   |         ^^^^^^^^^^^^^^^^^^
help: if this is a dyn-compatible trait, use `dyn`
   |
LL |         <dyn fmt::Debug>::fmt(self, f)
   |          +++

error: aborting due to 1 previous error

